homework01/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vinyl-library-service
  namespace: default
  labels:
    app: vinyl-library
spec:
  type: LoadBalancer
  selector:
    app: vinyl-library
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
